--- a/kelas10-2.html
+++ b/kelas10-2.html
@@ -88,19 +88,18 @@
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSe-xEKCOFx6mxZygwMppS-VOOocX6fiSFbN2mGlSaeuCMWgFg/viewform?usp=dialog" target="_blank">Sejarah Kebudayaan Islam</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdjaREOzT_fI8m0yCWkOvhxLmDtEzXIoqH6pGuoJj1kjYo20A/viewform?usp=dialog" target="_blank">Qur'an Hadist</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeHBIvXOeGMmMYqZDD7bJaAx0fQyAwoFR1utqomdSKHpWbabg/viewform?usp=dialog" target="_blank">Fisika</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJL5loCubb6eWkBNIk0gn1lbxsjDwbBJ68oH-y88xcEG0njw/viewform?usp=header" target="_blank">Biologi</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSejYSELk9x9wR93EKcGkYXWFQ0V9OQZlWPSGITvidLy6q_vpA/viewform?usp=dialog" target="_blank">Biologi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdcP1ZuHKY1tpNkSdBwkGoh7kva81qqfpm3Txxj99-pF7_WHQ/viewform?usp=dialog" target="_blank">Bahasa Indonesia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHlKEsws5plADRWKoDoQic3VmpVxBWZR5aToDhGrpnS7Zolg/viewform?usp=dialog" target="_blank">PKN</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdXwOiAdyOcmtPJ3IfEv27hWnuGnzPwXCZFLR1v3KjZKVWlFg/viewform?usp=dialog" target="_blank">Sosiologi</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia Kelas 10-1 dan 10-2</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfIr3yYxzzjyMO_RhMYJCvlWBWC1EI5ug0nuzCQET_A2AVHJw/viewform?usp=dialog" target="_blank">Kimia Kelas 10-3</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeksD_AahMiuy-WioDPGFWxl-lPCndyNHwRbTh8wogi-kP89A/viewform?usp=dialog" target="_blank">Kimia Kelas 10-4</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScvznk2Er2oQx2iDJhAeyAP-h1nLEND_WcpFTxiicJUrrxXqw/viewform?usp=dialog" target="_blank">Kimia</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScBKrgFtLh9x9Fnu9TXSdq5CwXvGHRz5MnfgLjOYo3FPfAFSg/viewform?usp=dialog" target="_blank">Matematika Wajib</a></li>
-        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc07rvQF3SuK3Nr_gqOY_GKOz0qcYme3fywwmagQx2KfTxTKg/viewform?usp=dialog" target="_blank">Fikih</a></li>
+        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSccvuLIt1pJgBUNgo9ESv8Y2N0LswaBCGPmTMQHSGaaT5_e_g/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Fikih</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhO1LNf4ZnBvmrXK8aGlvC-CGe63PQVIcd1DNLpkkbK3vZQw/viewform?usp=sharing&ouid=101735385110807286218" target="_blank">Akidah Akhlak</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdCL1Mj4JD63H4AQZfUYLm9lZflcBVktKVsVV-s4_b0wWkWZQ/viewform?usp=dialog" target="_blank">Geografi</a></li>
         <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc-ZqGlO3e1rhM8UlE7agLPrIptS3yOl6Shqb-kjgWfkMFbBA/viewform?usp=dialog" target="_blank">PJOK</a></li>
     </ul>
 </body>
 </html>
+
 
